# autoconf-kconfig

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap  configure  configure.ac  dk.sh  kbuild-autoconf.files  kbuild-autoconf.includes
example/: Kconfig  bootstrap  configure  configure.ac
example/m4/: ax_configure_args.m4  ax_enable_kconfig.m4
kconfig/: .config  .config.old  .zconf.tab.o.cmd  Kconfig  Makefile  Makefile.am  Makefile.in  conf.c  confdata.c  lkc.h  lkc_proto.h  nconf.c  symbol.c  zconf.lex.c_shipped  zconf.tab.c_shipped  zconf.y
m4/: ax_enable_kconfig.m4  ax_gitignore_list.m4  ax_target_selfhelp.m4  ax_with_curses.m4  ax_with_curses_extra.m4
patch/: vs_code_libxcb.patch
scripts/: build_common.ac  build_common.ac.orig  build_common.kconfig  build_common.mk  docker.ac  docker.kconfig  docker.mk  ext_ccStickers.ac  ext_ccStickers.kconfig  ext_jsonrpcc.ac  ext_jsonrpcc.kconfig  ext_libjit.ac  ext_libjit.kconfig  ext_libjit.mk  ext_llvm.ac  ext_llvm.kconfig  ext_mdsplus.ac  ext_mdsplus.kconfig  ext_mdsplus.mk  ext_nodejs_node.ac  ext_nodejs_node.kconfig  ext_nodejs_node.mk  ipysh.py  iter_codac.ac  iter_codac.kconfig  iter_codac.mk  jupyter.ac  jupyter.kconfig  jupyter.mk  linux.kconfig  linux.mk  nodejs.ac  nodejs.kconfig  nodejs.mk  project_variables.mk  python.ac  python.kconfig  python.mk  qtdesktop.ac  qtdesktop.kconfig  (+7 more)
tests/dk/: Makefile.am  Makefile.in  dk_functions.sh
tests/dk/docker/: Dockerfile
